CHANGES
=======

* Consolidate client methods to utils
* Refactor the module path for suuport future versions. Added recordsets support

0.1.0
-----

* Initial commit. The first prototype version with zone\_list action