@@ -2,3 +2,4 @@ venv/*
 build
 dist
 *.egg-info
+.tox
