@@ -1,0 +1,13 @@
+[tox]
+envlist = py27,py36
+
+[testenv]
+passenv = TEAMCITY_VERSION
+deps =
+    -r{toxinidir}/test-requirements.txt
+commands =
+    flake8 --teamcity=True designate_actions setup.py
+
+[flake8]
+ignore =
+    E501
